Update angular and splainer-search (#46)
* WIP: oi!

* Updates packages to move to angular 1.7.

* Fixes errors from upgrading version.

* a minor tweak.

* Small updates from @epugh's comments.

* Cleaning up some things that might cause a mess w. bower.

* Upgrades splainer-search and fixes progress bar.

* Links demonstrating difference between splainer.io and current splainer!

* remove the ! prefix from the URL.

* Fixes tests after upgrade.

* ädding mroe links

* be explicit about commnad

* ädd elasticsearch example

--- a/app/views/detailedExplain.html
+++ b/app/views/detailedExplain.html
@@ -3,35 +3,39 @@
 
     <div class="row">
       <div>
-        <tabset>
-          <tab heading="Summarized">
+        <uib-tabset>
+          <uib-tab heading="Summarized">
           <div class="explain-view" ng-class="{true: 'col-md-6', false: 'col-md-12'}[altDoc !== null]">
             <pre>{{doc.explain().toStr()}}</pre>
           </div>
           <div  class="explain-view" ng-if="altDoc" ng-class="{true: 'col-md-6', false: 'col-md-0'}[altDoc !== null]">
             <pre>{{altDoc.explain().toStr()}}</pre>
-          </div> 
-          </tab>
-          <tab heading="Hot Matches">
+          </div>
+          </uib-tab>
+          <uib-tab heading="Hot Matches">
           <div  class="explain-view" ng-class="{true: 'col-md-6', false: 'col-md-12'}[altDoc !== null]">
             <pre>{{doc.hotMatches().toStr()}}</pre>
           </div>
           <div  class="explain-view" ng-if="altDoc" ng-class="{true: 'col-md-6', false: 'col-md-0'}[altDoc !== null]">
             <pre>{{altDoc.hotMatches().toStr()}}</pre>
-          </div> 
-          </tab>
-          <tab heading="Full Explain">
+          </div>
+          </uib-tab>
+          <uib-tab heading="Full Explain">
             <div ng-class="{true: 'col-md-6', false: 'col-md-12'}[altDoc !== null]">
-              <json-explorer json-data="{{doc.explain().rawStr()}}"></json-explorer>
+              <json-explorer
+                json-data="doc.explain().rawStr()"
+              ></json-explorer>
             </div>
             <div ng-if="altDoc" ng-class="{true: 'col-md-6', false: 'col-md-0'}[altDoc !== null]">
-              <json-explorer json-data="{{altDoc.explain().rawStr()}}"></json-explorer>
+              <json-explorer
+                json-data="altDoc.explain().rawStr()"
+              ></json-explorer>
             </div>
-          </tab>
-        </tabset>
+          </uib-tab>
+        </uib-tabset>
       </div>
     </div>
-    
+
 </div>
 <div ng-show="canExplainOther" class="container">
     <hr/>
