--- a/app/views/docRow.html
+++ b/app/views/docRow.html
@@ -1,13 +1,13 @@
 <div class="row docRow">
   <div class="col-md-4">
-    <h4>{{doc.score}}</h4>
+    <h4>{{doc.score()}}</h4>
     <stacked-chart detailed="doc.showDetailed" hots="doc.hotMatchesOutOf(maxScore)"></stacked-chart>
   </div>
 
   <div class="col-md-8">
     <h4><a href="" ng-click="doc.showDoc()"> {{doc.title}}</a></h4>
     <div ng-if="doc.hasThumb()">
-      <img style="max-height: 200px" src="{{doc.thumb}}"></img>
+      <img style="max-height: 200px" ng-src="{{doc.thumb}}"></img>
     </div>
     <div ng-repeat="(fieldName, fieldSnippet) in docRow.snippets(doc)">
       <label class="fieldLabel">
